src/main/java/com/example/raisingjungsu/global/error/exception/CustomException.java
package com.example.raisingjungsu.global.error.exception;

import com.example.raisingjungsu.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
}
